--- a/content/docs/core-concepts/infrastructure/index.mdx
+++ b/content/docs/core-concepts/infrastructure/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: Infrastructure
+title: Overview
 description: ElizaOS infrastructure components and development tools
 ---
 
-## Overview
+# Infrastructure Overview
 
 ElizaOS infrastructure provides a comprehensive set of tools and services for building, testing, deploying, and managing AI agents. The infrastructure is designed to be developer-friendly, scalable, and secure.
 
